removed the underlines below the buttons

--- a/first_app/news/templates/news/news_home.html
+++ b/first_app/news/templates/news/news_home.html
@@ -5,8 +5,8 @@
 {% block content %}
     <div class="features">
         <h1>News</h1>
-        <p>Muslims are bustards</p>
-        <button class="btn btn-warning">Repeat?</button>
+        <p>The most important news</p>
+        <button class="btn btn-warning">Next?</button>
 
         {% for el in values %}
             <p>{{ el }}</p>
