--- a/first_app/main/static/main/css/main.css
+++ b/first_app/main/static/main/css/main.css
@@ -52,3 +52,6 @@ main .features {
 
 main .features h1 {font-size: 50px}
 main .features p {max-width: 400px; margin: 20px auto}
+a {
+    text-decoration: none;
+}
